# MCP-Server

./: .dockerignore  .env  .env.example  .gitignore  AGENT_REGISTRATION.md  DATA_FLOW_README.md  Dockerfile  LANGCHAIN_CHAINLIT_FIXES.md  LANGCHAIN_TOOL_CHAINING_README.md  LICENSE  MCP_INTEGRATION.md  README.md  USAGE.md  alembic.ini  chainlit.md  chainlit.yaml  client.py  client_cli.py  config.yaml  conftest.py  demo_claude_mcp.py  demo_mcp.py  docker-compose.yml  docker-entrypoint.sh  initialize_db.py  install.py  main.py  mcp_client.py  mcp_server.py  migration_plan.md  package.json  pyproject.toml  pytest.ini  requirements-extra.txt  requirements.txt  run.py  setup.py  simple_mcp_server.py  start.sh  test_chain.py  (+4 more)
.chainlit/: config.toml
app/: __init__.py  chainlit_app.py  cli.py  client.py  config.py  fallback_handler.py  langchain_bridge.py  llm_wrapper.py  main.py  mcp_bridge.py  mcp_server.py  results_coordinator.py  sse_handler.py  stdio_handler.py  streamlined_mcp_server.py
config/: parameter_mappings.json
data/: sample.csv
docs/: README.md  api_keys.md  architecture.md  code_walkthrough.md  curl_examples.md  docker_usage.md  integration_guide.md  langchain_bridge.md  main.md  package_local_setup.md  server_info_format.md  setup_and_configuration.md  snowflake.md  system_architecture.md  usage.md
examples/: README.md  data_query.py  dummy_financial_server.py  langchain_comparison.py
graphiti_integration/: README.md  client_graphiti.py  config.py  ingest_clients.py  mcp_server_graphiti.py  requirements.txt  utils.py
kubernetes/: deployment.yaml  mcp-config.yaml  redis.yaml  service.yaml
logs/: mcp_interactions_20250511.csv  mcp_interactions_20250526.csv
mcp/: __init__.py  types.py
mcp_client/: setup.py
migrations/: env.py
output/: chatgpt_test_output.txt  getClientValueRevenueByProduct.csv  getRevenueTotalByTimePeriod.csv  getTopClients.csv
project-docs/: README.md  flow.md
scripts/: create_admin_key.py  init_metadata.py  init_postgres.sql  manage_keys.py  migrate_to_mcp.py  post-install.js  setup.bat  setup.sh  setup_directories.py  view_metadata.py
storage/: azure_blobs.json  data_sources.json  models.json  s3_buckets.json  s3_files.json  snowflake_schema.json  snowflake_tables.json
templates/: base.html  index.html
test_client/: cli.py  config.py  requirements.txt  test_llm.py  web_interface.py
tests/: check_compass_fields.py  check_mcp_tools.py  clientview_endpoint_test.py  conftest.py  direct_tool_test.py  list_tools.py  sample_tool.py  test_LLM_auth.py  test_api.py  test_api_endpoints.py  test_clientview_financials.py  test_end_to_end.py  (+18 more)
(+113 files in other folders)
