[project]
name = "crm-mcp-server"
version = "0.1.0"
description = "CRM MCP Server with Chainlit Integration"
authors = [
    {name = "Team", email = "team@abc.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "fastmcp>=0.1.0",
    "chainlit>=0.7.0",
    "pydantic>=2.4.2",
    "httpx>=0.25.0",
    "sse-starlette>=1.6.1",
    "python-multipart>=0.0.6",
    "redis>=4.5.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "cohere>=4.32",
    "anthropic>=0.5,<1.0.0",
    "boto3>=1.28.62",
    "markdown>=3.5",
    "beautifulsoup4>=4.12.2",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "click>=8.0.0",
    "pytest>=7.4.0"
]
requires-python = ">=3.9"

[project.scripts]
uvx = "app.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
modules = ["mcp_client"]
